feat: make manager employee profiles editable (#599)
